--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -14,7 +14,7 @@ header {
     -webkit-box-pack: center;
     justify-content: center;
 
-    background-image: linear-gradient(#00000055, #00000055), url('/assets/snow-village.jpg');
+    background-image: linear-gradient(#00000055, #00000055), url('/assets/snow-village.webp');
     background-position: center top;
     -webkit-background-size: cover;
     background-size: cover;
