--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,45 +3,23 @@ html {
 }
 
 body {
+    position: relative;
+
     text-align: center;
     font-size: 1.2em;
+
+    background-image: linear-gradient(#0007, #0007), url('/assets/snow-village.webp');
+    background-position: center top;
+    -webkit-background-size: cover;
+    background-size: cover;
 }
 
-.content-line {
-    display: inline-block;
-
-    height: 1px;
-}
-
-section > .container {
-    padding-top: 3em;
-    padding-bottoM: 3em;
-}
-
-.section-blue {
-    background-color: #cdf;
-}
-
-.section-white {
-    background-color: #fff;
-}
-
-p {
-    margin: 0;
-}
-
-a {
-    color: navy;
-}
-
-a:hover {
-    color: blue;
-}
-
-.bg-dark a {
+a, a:hover, a:focus {
     color: white;
 }
 
-.bg-dark a:hover {
-    color: #ccf;
-}
+@keyframes fadein { from { opacity: 0; } to { opacity: 1; } }
+@-moz-keyframes fadein { from { opacity: 0; } to { opacity: 1; } } /* Firefox < 16 */
+@-webkit-keyframes fadein { from { opacity: 0; } to { opacity: 1; } } /* Safari, Chrome and Opera > 12.1 */
+@-ms-keyframes fadein { from { opacity: 0; } to { opacity: 1; } } /* Internet Explorer */
+@-o-keyframes fadein { from { opacity: 0; } to { opacity: 1; } } /* Opera < 12.1 */
