--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -14,7 +14,16 @@ header {
     -webkit-box-pack: center;
     justify-content: center;
 
+    background-image: linear-gradient(#0007, #0007), url('/assets/snow-village.webp');
+    background-position: center top;
+    -webkit-background-size: cover;
+    background-size: cover;
+
     color: white;
+}
+
+header > * {
+    z-index: 1;
 }
 
 #particles-switch {
