--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,22 +3,124 @@ html {
 }
 
 body {
-    position: relative;
+    margin: 0;
+
+    background-color: #222;
 
     text-align: center;
-    font-size: 1.2em;
+    color: #FFF;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 
-a, a:hover, a:focus {
-    color: black;
+.black {
+    padding: 2em;
+
+    background-color: black;
 }
 
-.white-links a, .white-links a:hover, .white-links a:focus {
-    color: white;
+h1 {
+    margin-bottom: 16px;
+    font-size: 5rem;
+    font-weight: bold;
 }
 
-@keyframes fadein { from { opacity: 0; } to { opacity: 1; } }
-@-moz-keyframes fadein { from { opacity: 0; } to { opacity: 1; } } /* Firefox < 16 */
-@-webkit-keyframes fadein { from { opacity: 0; } to { opacity: 1; } } /* Safari, Chrome and Opera > 12.1 */
-@-ms-keyframes fadein { from { opacity: 0; } to { opacity: 1; } } /* Internet Explorer */
-@-o-keyframes fadein { from { opacity: 0; } to { opacity: 1; } } /* Opera < 12.1 */
+h2 {
+    margin: 0;
+    font-size: 32px;
+    font-weight: lighter;
+}
+
+h3 {
+    margin: 0;
+    font-size: 28px;
+    font-weight: normal;
+}
+
+h4 {
+    margin: 0;
+    font-size: 24px;
+    font-weight: normal;
+}
+
+p {
+    margin: 0;
+    font-weight: normal;
+}
+
+a {
+    color: #FFF;
+    text-decoration: none;
+}
+
+a:hover, a:focus {
+    color: #CCF;
+    text-decoration: none;
+}
+
+#particles-switch {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+header {
+    min-height: 100vh;
+
+    padding: 4em 1em;
+    box-sizing: border-box;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    background-image: linear-gradient(#0007, #0007), url('/assets/snow-village.webp');
+    background-position: center center;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+
+header > * {
+    z-index: 1;
+}
+
+section {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.cardboard {
+    min-width: 230px;
+
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 50%;
+
+    background-position: center center;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+
+.cardboard > a {
+    height: 100%;
+    width: 100%;
+
+    padding: 2em;
+    box-sizing: border-box;
+
+    display: block;
+
+    background-color: #0009;
+
+    transition: all .2s ease-in-out;
+}
+
+.cardboard > a:hover {
+    background-color: #000D;
+}
+
+.cardboard > a > img {
+    margin-bottom: 16px;
+    width: 100px;
+}
