--- a/assets/css/particles.css
+++ b/assets/css/particles.css
@@ -1,9 +1,16 @@
+@keyframes fadein { from { opacity: 0; } to { opacity: 1; } }
+@-moz-keyframes fadein { from { opacity: 0; } to { opacity: 1; } } /* Firefox < 16 */
+@-webkit-keyframes fadein { from { opacity: 0; } to { opacity: 1; } } /* Safari, Chrome and Opera > 12.1 */
+@-ms-keyframes fadein { from { opacity: 0; } to { opacity: 1; } } /* Internet Explorer */
+@-o-keyframes fadein { from { opacity: 0; } to { opacity: 1; } } /* Opera < 12.1 */
+
 #particles {
     position: absolute;
-    z-index: 0;
 
     width: 100%;
     height: 100%;
+
+    z-index: 0;
 
     animation: fadein 10s;
     -webkit-animation: fadein 10s; /* Safari, Chrome and Opera > 12.1 */
