--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,6 +19,7 @@ body {
 }
 
 h1 {
+    margin: 0;
     margin-bottom: 16px;
     font-size: 5rem;
     font-weight: bold;
@@ -32,19 +33,18 @@ h2 {
 
 h3 {
     margin: 0;
-    font-size: 28px;
+    font-size: 24px;
     font-weight: normal;
 }
 
 h4 {
     margin: 0;
-    font-size: 24px;
+    font-size: 16px;
     font-weight: normal;
 }
 
 p {
     margin: 0;
-    font-weight: normal;
 }
 
 a {
