modifying some details and adding hydrosnow.dev link

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,7 +33,7 @@ h2 {
 
 h3 {
     margin: 0;
-    font-size: 24px;
+    font-size: 32px;
     font-weight: normal;
 }
 
@@ -121,6 +121,7 @@ section {
 }
 
 .cardboard > a > img {
+    margin-top: 8px;
     margin-bottom: 16px;
     width: 100px;
 }
