--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -95,7 +95,7 @@ section {
 
     flex-grow: 1;
     flex-shrink: 1;
-    flex-basis: 50%;
+    flex-basis: calc(100% / 3);
 
     background-position: center center;
     -webkit-background-size: cover;
