--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,7 +74,7 @@ header {
     align-items: center;
     justify-content: center;
 
-    background-image: linear-gradient(#0007, #0007), url('/assets/snow-village.webp');
+    background-image: linear-gradient(#0007, #0007), url('/assets/snow-village.jpg');
     background-position: center center;
     -webkit-background-size: cover;
     background-size: cover;
