--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,6 +27,13 @@ h1 {
 
 h2 {
     margin: 0;
+    margin-bottom: 16px;
+    font-size: 3rem;
+    font-weight: bold;
+}
+
+h2 {
+    margin: 0;
     font-size: 32px;
     font-weight: lighter;
 }
