adding class for pdf div container

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,6 +81,10 @@ a:hover, a:focus {
     background-color: black;
 }
 
+.pdf-div {
+    overflow-x: auto;
+}
+
 .cardboard-container {
     display: flex;
     flex-direction: row;
