--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@ body {
     background-color: #222;
     text-align: center;
     color: #FFF;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 header {
@@ -26,7 +26,7 @@ header {
     background-size: cover;
 }
 
-header > * {
+header>* {
     z-index: 1;
 }
 
@@ -36,7 +36,11 @@ header > * {
     left: 10px;
 }
 
-h1, h2, h3, h4, p {
+h1,
+h2,
+h3,
+h4,
+p {
     margin: 0;
 }
 
@@ -65,7 +69,8 @@ a {
     text-decoration: none;
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
     color: #CCF;
     text-decoration: none;
 }
@@ -111,7 +116,7 @@ a:hover, a:focus {
     color: #FFF;
 }
 
-.cardboard-content > img {
+.cardboard-content>img {
     margin-top: 8px;
     margin-bottom: 8px;
     width: 64px;
