--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,10 +4,10 @@ html {
 
 body {
     margin: 0;
-    background-color: #222;
     text-align: center;
     color: #FFF;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    background-color: black;
 }
 
 header {
@@ -49,11 +49,6 @@ h2 {
 }
 
 h3 {
-    font-size: 32px;
-    font-weight: lighter;
-}
-
-h4 {
     font-size: 24px;
     font-weight: normal;
 }
@@ -69,49 +64,32 @@ a:focus {
     text-decoration: none;
 }
 
-.arrow {
-    margin: 0;
-    margin-top: 16px;
-}
-
-.black {
-    padding: 2em;
-    background-color: black;
-}
-
-.cardboard-container {
+.container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
 }
 
 .cardboard {
-    min-width: 230px;
+    padding: 2em;
 
     flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: calc(100% / 3);
 
     background-position: center center;
     -webkit-background-size: cover;
     background-size: cover;
 }
 
-.cardboard-content {
-    height: 100%;
-    width: 100%;
-
-    padding: 2em;
-    box-sizing: border-box;
-
-    display: block;
-
-    background-color: #000B;
-    color: #FFF;
-}
-
-.cardboard-content>img {
+.cardboard>img {
     margin-top: 8px;
     margin-bottom: 8px;
     width: 64px;
+}
+
+.footer {
+    margin: 2em;
+
+    flex-grow: 0;
 }
